.provarCaches/00D6C0000000xA6UAI/objects/Integration_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integration Error Logs</relationshipLabel>
        <relationshipName>Integration_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <label>Error Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Current_Status__c</fullName>
        <formula>TEXT(Fulfillment_Item__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Integration Error Logs</relationshipLabel>
        <relationshipName>Integration_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Integration Error Logs</relationshipLabel>
        <relationshipName>Integration_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Integration_Error_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Integration Error Log</label>
        <referenceTo>Integration_Error_Log__c</referenceTo>
        <relationshipLabel>Integration Error Logs</relationshipLabel>
        <relationshipName>Integration_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Error Log</label>
    <listViews>
        <fullName>Credit_Card_Open_Error_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Source__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Error_Details__c</columns>
        <columns>Fixed_by__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>contains</operation>
            <value>CC,CBRET,B2C</value>
        </filters>
        <label>Credit Card Open Error Logs</label>
    </listViews>
    <listViews>
        <fullName>Invoice_Open_Error_Logs</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Parent_Integration_Error_Log__c</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Details__c</columns>
        <columns>Status__c</columns>
        <columns>Fixed_by__c</columns>
        <columns>Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In Progress</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CFS</value>
        </filters>
        <filters>
            <field>Parent_Integration_Error_Log__c</field>
            <operation>equals</operation>
        </filters>
        <label>Invoice Open Error Logs</label>
    </listViews>
    <listViews>
        <fullName>Open_Integration_Errors</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Order__c</columns>
        <columns>Fulfillment_Current_Status__c</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Error_Details__c</columns>
        <columns>Fixed_by__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
            <value>B2C_Fulfillment</value>
        </filters>
        <filters>
            <field>Fulfillment_Item__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Fulfillment_Current_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Parent_Integration_Error_Log__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open Integration Errors</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Integration Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>